--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 				</div>
 				<div id="content-div-parent">
 					<div id="content-div" class="no-display">
-						<a id="contentBox1" class="contentBox" href="./Index/1.Operators&Exressions.html" target="_blank"
+						<a id="contentBox1" class="contentBox" href="./Indexes/1.Operators&Exressions.html" target="_blank"
 							>Oprators & <br />
 							Expressions</a
 						>
-						<a id="contentBox2" class="contentBox" href="./Index/2.Decision-Making.html" target="_blank">Decision Making.</a>
-						<a id="contentBox3" class="contentBox" href="./Index/3.Iteration-Statements.html" target="_blank">Iteration Statements.</a>
-						<a id="contentBox4" class="contentBox" href="./Index/4.Arrays.html" target="_blank">Arrays.</a>
-						<a id="contentBox5" class="contentBox" href="./Index/5.Strings.html" target="_blank">Strings.</a>
-						<a id="contentBox6" class="contentBox" href="./Index/6.Problem-Solving.html" target="_blank">Problem Solving.</a>
-						<a id="contentBox7" class="contentBox" href="./Index/7.Objects.html" target="_blank">Objects.</a>
-						<a id="contentBox8" class="contentBox" href="./Index/8.Assignment.html" target="_blank">Assignments.</a>
+						<a id="contentBox2" class="contentBox" href="./Indexes/2.Decision-Making.html" target="_blank">Decision Making.</a>
+						<a id="contentBox3" class="contentBox" href="./Indexes/3.Iteration-Statements.html" target="_blank">Iteration Statements.</a>
+						<a id="contentBox4" class="contentBox" href="./Indexes/4.Arrays.html" target="_blank">Arrays.</a>
+						<a id="contentBox5" class="contentBox" href="./Indexes/5.Strings.html" target="_blank">Strings.</a>
+						<a id="contentBox6" class="contentBox" href="./Indexes/6.Problem-Solving.html" target="_blank">Problem Solving.</a>
+						<a id="contentBox7" class="contentBox" href="./Indexes/7.Objects.html" target="_blank">Objects.</a>
+						<a id="contentBox8" class="contentBox" href="./Indexes/8.Assignment.html" target="_blank">Assignments.</a>
 					</div>
 				</div>
 			</div>
