--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		<title>JS Assignments</title>
 	</head>
 	<body>
-		<div class="main-container">
+		<div id="main-container1" class="main-container">
 			<header id="hello-msg">console.log("Hello..");</header>
-			<div id="main-parent">
-				<div id="header">
+			<div class="main-parent">
+				<div class="containerHeader">
 					<div id="subHeader1" class="subHeaderRows">
 						<img src="./Assets/Images/javascript.svg" alt="Java Script file icon." />
-						<p class="headerPara">Javascript Coding Questions.</p>
+						<p class="headerPara">Javascript Dashboard Questions.</p>
 						<div id="progress-container">
 							<progress class="headerProgressBar" max="100" value="72"></progress>
 							<div id="progressText">72% Done.</div>
@@ -37,11 +37,11 @@
 							<div id="solved-color"></div>
 							<p id="solved-para">Solved: 62</p>
 						</div>
-						<button id="button" onclick="myFunction()" class="show-text"></button>
+						<button id="button1" onclick="myFunction()" class="show-text button"></button>
 					</div>
 				</div>
-				<div id="content-div-parent">
-					<div id="content-div" class="no-display">
+				<div class="content-div-parent">
+					<div id="content-div1" class="no-display">
 						<a id="contentBox1" class="contentBox" href="./Indexes/1.Operators&Exressions.html" target="_blank"
 							>Oprators & <br />
 							Expressions</a
@@ -53,6 +53,40 @@
 						<a id="contentBox6" class="contentBox" href="./Indexes/6.Problem-Solving.html" target="_blank">Problem Solving.</a>
 						<a id="contentBox7" class="contentBox" href="./Indexes/7.Objects.html" target="_blank">Objects.</a>
 						<a id="contentBox8" class="contentBox" href="./Indexes/8.Assignment.html" target="_blank">Assignments.</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="main-container2" class="main-container">
+			<div class="main-parent">
+				<div class="containerHeader">
+					<div id="subHeader1" class="subHeaderRows">
+						<img src="./Assets/Images/google-sheets-48.svg" alt="Java Script file icon." style="width: min(100%, 90px)" />
+						<p class="headerPara">Javascript Google sheet Questions.</p>
+						<!-- <div id="progress-container">
+							<progress class="headerProgressBar" max="100" value="72"></progress>
+							<div id="progressText">72% Done.</div>
+						</div> -->
+					</div>
+					<div id="subHeader2" class="subHeaderRows">
+						<p id="subHeader2-para1">Total Questions: -</p>
+						<div id="solved-div">
+							<div id="solved-color"></div>
+							<p id="solved-para">Solved: -</p>
+						</div>
+						<button id="button2" onclick="my2ndFunction()" class="show-text button"></button>
+					</div>
+				</div>
+				<div class="content-div-parent">
+					<div id="content-div2" class="no-display">
+						<a id="contentBox9" class="contentBox" href="./Indexes/Sheet-Questions/9.Array-Of-Objects.html" target="_blank">Array of Objects</a>
+						<a id="contentBox10" class="contentBox" href="./Indexes/Sheet-Questions/10.DOM.html" target="_blank">DOM.</a>
+						<a id="contentBox11" class="contentBox" href="./Indexes/Sheet-Questions/11.Functions.html" target="_blank">Functions.</a>
+						<!-- <a id="contentBox12" class="contentBox" href="./Indexes/4.Arrays.html" target="_blank">Functions.</a>
+						<a id="contentBox13" class="contentBox" href="./Indexes/5.Strings.html" target="_blank">Strings.</a>
+						<a id="contentBox14" class="contentBox" href="./Indexes/6.Problem-Solving.html" target="_blank">Problem Solving.</a>
+						<a id="contentBox15" class="contentBox" href="./Indexes/7.Objects.html" target="_blank">Objects.</a>
+						<a id="contentBox16" class="contentBox" href="./Indexes/8.Assignment.html" target="_blank">Assignments.</a> -->
 					</div>
 				</div>
 			</div>
