changed sheet questions styling and colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="main-container1" class="main-container">
 			<header id="hello-msg">console.log("Hello..");</header>
 			<div class="main-parent">
-				<div class="containerHeader">
+				<div id="containerHeader1" class="containerHeader">
 					<div id="subHeader1" class="subHeaderRows">
 						<img src="./Assets/Images/javascript.svg" alt="Java Script file icon." />
 						<p class="headerPara">Javascript Dashboard Questions.</p>
@@ -59,7 +59,7 @@
 		</div>
 		<div id="main-container2" class="main-container">
 			<div class="main-parent">
-				<div class="containerHeader">
+				<div id="containerHeader2" class="containerHeader">
 					<div id="subHeader1" class="subHeaderRows">
 						<img src="./Assets/Images/google-sheets-48.svg" alt="Java Script file icon." style="width: min(100%, 90px)" />
 						<p class="headerPara">Javascript Google sheet Questions.</p>
