Added total number of questions on each index page.

--- a/Indexes/2.Decision-Making.html
+++ b/Indexes/2.Decision-Making.html
@@ -13,6 +13,7 @@
 		<title>JS Assessment-2</title>
 	</head>
 	<body>
+		<div id="total-questions">Total Number of Questions: 9</div>
 		<main>
 			<header class="headings">
 				<h1 id="h1-heading1">JS Decision Making.</h1>
