--- a/Indexes/5.Strings.html
+++ b/Indexes/5.Strings.html
@@ -13,6 +13,7 @@
 		<title>JS Assessment-5</title>
 	</head>
 	<body>
+		<div id="total-questions">Total Number of Questions: 13</div>
 		<main>
 			<header class="headings">
 				<h1 id="h1-heading1">JS Strings.</h1>
@@ -298,8 +299,8 @@
 					</div>
 				</details>
 				<hr />
-				<details id="ans12" class="answers">
-					<summary id="que12" class="questions">
+				<details id="ans13" class="answers">
+					<summary id="que13" class="questions">
 						&nbsp;<span class="que-name-span"> Count the Vowels and Consonants.</span>
 						<p class="que-main-para">You are given a string <code class="code-var">S</code> containing both uppercase and lowercase letters. You need to find out the number of vowels and the number of consonants in the given string.</p>
 						<p class="question-note"><strong>Note:</strong> Complete the <code class="code-var">Split_the_string</code> function. No need to take any input.</p>
