--- a/Indexes/6.Problem-Solving.html
+++ b/Indexes/6.Problem-Solving.html
@@ -13,6 +13,7 @@
 		<title>JS Assessment-6</title>
 	</head>
 	<body>
+		<div id="total-questions">Total Number of Questions: 5</div>
 		<main>
 			<header class="headings">
 				<h1 id="h1-heading1">JS Problem Solving.</h1>
