--- a/Indexes/7.Objects.html
+++ b/Indexes/7.Objects.html
@@ -13,6 +13,7 @@
 		<title>JS Assessment-7</title>
 	</head>
 	<body>
+		<div id="total-questions">Total Number of Questions: 8</div>
 		<main>
 			<header class="headings">
 				<h1 id="h1-heading1">JS Objects.</h1>
@@ -109,8 +110,8 @@
 					</div>
 				</details>
 				<hr />
-				<details id="ans5" class="answers">
-					<summary id="que5" class="questions">
+				<details id="ans6" class="answers">
+					<summary id="que6" class="questions">
 						&nbsp;<span class="que-name-span"> Objects Multiplyer.</span>
 						<p class="que-main-para">
 							Complete the function in the editor. In which you are given an object and a digit N as a parameter.In the object there are two variable id and houseno are defined as a data member. You have to multiply both the data members with a given digit N.
@@ -128,8 +129,8 @@
 					</div>
 				</details>
 				<hr />
-				<details id="ans5" class="answers">
-					<summary id="que5" class="questions">
+				<details id="ans7" class="answers">
+					<summary id="que7" class="questions">
 						&nbsp;<span class="que-name-span"> Find the sum of Object Members.</span>
 						<p class="que-main-para">
 							You are given a function Check which takes an object <code class="code-var">Obj</code> as a parameter. Your taks is to find out the sum of the three data members of the object. The data members are named as <code class="code-var"> p1, p2, p3</code>.
@@ -147,8 +148,8 @@
 					</div>
 				</details>
 				<hr />
-				<details id="ans5" class="answers">
-					<summary id="que5" class="questions">
+				<details id="ans8" class="answers">
+					<summary id="que8" class="questions">
 						&nbsp;<span class="que-name-span"> Check whether the Objects are same or not.</span>
 						<p class="que-main-para">
 							Complete the function in the editor. In which you are given an object as a parameter. That object contains two variables <code class="code-var">name</code> and <code class="code-var">id</code>. Your task is to compare the objects <code class="code-var">name</code> and
