--- a/Indexes/Sheet-Questions/10.DOM.html
+++ b/Indexes/Sheet-Questions/10.DOM.html
@@ -48,6 +48,7 @@
 		</style>
 	</head>
 	<body>
+		<div id="total-questions">Total Number of Questions: 10</div>
 		<main>
 			<header class="headings">
 				<h1 id="h1-heading1">JS-DOM Questions.</h1>
