--- a/Indexes/1.Operators&Exressions.html
+++ b/Indexes/1.Operators&Exressions.html
@@ -13,6 +13,7 @@
         <title>JS Assessment-1</title>
     </head>
     <body>
+        <div id="total-questions">Total Number of Questions: 8</div>
         <main>
             <header class="headings">
                 <h1 id="h1-heading1">JS Operators and Expressions.</h1>
