--- a/Indexes/3.Iteration-Statements.html
+++ b/Indexes/3.Iteration-Statements.html
@@ -13,6 +13,7 @@
 		<title>JS Assessment-3</title>
 	</head>
 	<body>
+		<div id="total-questions">Total Number of Questions: 9</div>
 		<main>
 			<header class="headings">
 				<h1 id="h1-heading1">JS Iteration Statements.</h1>
