--- a/Indexes/4.Arrays.html
+++ b/Indexes/4.Arrays.html
@@ -13,6 +13,7 @@
         <title>JS Assessment-4</title>
     </head>
     <body>
+        <div id="total-questions">Total Number of Questions: 11</div>
         <main>
             <header class="headings">
                 <h1 id="h1-heading1">JS Arrays.</h1>
