Created Inheritance & Prototype, and functions changed Ans margin,

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 				</div>
 				<div class="content-div-parent">
 					<div id="content-div1" class="no-display">
-						<a id="contentBox1" class="contentBox" href="./Indexes/1.Operators&Exressions.html" target="_blank"
-							>Oprators & <br />
-							Expressions</a
-						>
-						<a id="contentBox2" class="contentBox" href="./Indexes/2.Decision-Making.html" target="_blank">Decision Making.</a>
-						<a id="contentBox3" class="contentBox" href="./Indexes/3.Iteration-Statements.html" target="_blank">Iteration Statements.</a>
-						<a id="contentBox4" class="contentBox" href="./Indexes/4.Arrays.html" target="_blank">Arrays.</a>
-						<a id="contentBox5" class="contentBox" href="./Indexes/5.Strings.html" target="_blank">Strings.</a>
-						<a id="contentBox6" class="contentBox" href="./Indexes/6.Problem-Solving.html" target="_blank">Problem Solving.</a>
-						<a id="contentBox7" class="contentBox" href="./Indexes/7.Objects.html" target="_blank">Objects.</a>
-						<a id="contentBox8" class="contentBox" href="./Indexes/8.Assignment.html" target="_blank">Assignments.</a>
+						<a id="contentBox1" class="contentBox" href="./Indexes/1.Operators&Exressions.html">
+							Oprators & <br />
+							Expressions
+						</a>
+						<a id="contentBox2" class="contentBox" href="./Indexes/2.Decision-Making.html">Decision Making.</a>
+						<a id="contentBox3" class="contentBox" href="./Indexes/3.Iteration-Statements.html">Iteration Statements.</a>
+						<a id="contentBox4" class="contentBox" href="./Indexes/4.Arrays.html">Arrays.</a>
+						<a id="contentBox5" class="contentBox" href="./Indexes/5.Strings.html">Strings.</a>
+						<a id="contentBox6" class="contentBox" href="./Indexes/6.Problem-Solving.html">Problem Solving.</a>
+						<a id="contentBox7" class="contentBox" href="./Indexes/7.Objects.html">Objects.</a>
+						<a id="contentBox8" class="contentBox" href="./Indexes/8.Assignment.html">Assignments.</a>
 					</div>
 				</div>
 			</div>
@@ -79,14 +79,17 @@
 				</div>
 				<div class="content-div-parent">
 					<div id="content-div2" class="no-display">
-						<a id="contentBox9" class="contentBox" href="./Indexes/Sheet-Questions/9.Array-Of-Objects.html" target="_blank">Array of Objects</a>
-						<a id="contentBox10" class="contentBox" href="./Indexes/Sheet-Questions/10.DOM.html" target="_blank">DOM.</a>
-						<a id="contentBox11" class="contentBox" href="./Indexes/Sheet-Questions/11.Functions.html" target="_blank">Functions.</a>
-						<!-- <a id="contentBox12" class="contentBox" href="./Indexes/4.Arrays.html" target="_blank">Functions.</a>
-						<a id="contentBox13" class="contentBox" href="./Indexes/5.Strings.html" target="_blank">Strings.</a>
-						<a id="contentBox14" class="contentBox" href="./Indexes/6.Problem-Solving.html" target="_blank">Problem Solving.</a>
-						<a id="contentBox15" class="contentBox" href="./Indexes/7.Objects.html" target="_blank">Objects.</a>
-						<a id="contentBox16" class="contentBox" href="./Indexes/8.Assignment.html" target="_blank">Assignments.</a> -->
+						<a id="contentBox9" class="contentBox" href="./Indexes/Sheet-Questions/9.Array-Of-Objects.html">Array of Objects</a>
+						<a id="contentBox10" class="contentBox" href="./Indexes/Sheet-Questions/10.DOM.html">DOM.</a>
+						<a id="contentBox11" class="contentBox" href="./Indexes/Sheet-Questions/11.Functions.html">Functions.</a>
+						<a id="contentBox12" class="contentBox" href="./Indexes/4.Arrays.html">
+							Inheritance & <br />
+							Prototypes.
+						</a>
+						<!-- <a id="contentBox13" class="contentBox" href="./Indexes/5.Strings.html">Strings.</a>
+						<a id="contentBox14" class="contentBox" href="./Indexes/6.Problem-Solving.html">Problem Solving.</a>
+						<a id="contentBox15" class="contentBox" href="./Indexes/7.Objects.html">Objects.</a>
+						<a id="contentBox16" class="contentBox" href="./Indexes/8.Assignment.html">Assignments.</a> -->
 					</div>
 				</div>
 			</div>
