--- a/Indexes/Sheet-Questions/10.DOM.html
+++ b/Indexes/Sheet-Questions/10.DOM.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,  initial-scale=1.0" />
 
 		<!-- Favicons -->
-		<link type="image/png" sizes="32x32" rel="icon" href="../Assets/Favicons/1.favicon-32x32.png" />
+		<link type="image/png" sizes="32x32" rel="icon" href="../../Assets/Favicons/2.favicon-32x32.png" />
 
 		<link rel="stylesheet" href="../../CSS/styles1.css" />
 
