--- a/Indexes/Sheet-Questions/11.Functions.html
+++ b/Indexes/Sheet-Questions/11.Functions.html
@@ -13,6 +13,7 @@
 		<title>JS-Functions Questions</title>
 	</head>
 	<body>
+		<div id="total-questions">Total Number of Questions: 7</div>
 		<main>
 			<header class="headings">
 				<h1 id="h1-heading1">JS-Functions Questions.</h1>
@@ -22,7 +23,7 @@
 					<summary id="que1" class="questions">
 						&nbsp;<span class="que-name-span"> Zero Parameter Function.</span>
 						<br />
-						<p class="que-main-para">Create one function with zero parameter having a console statement</p>
+						<p class="que-main-para">Create one function with zero parameter having a console statement.</p>
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Code:-</div>
