--- a/Indexes/Sheet-Questions/10.DOM.html
+++ b/Indexes/Sheet-Questions/10.DOM.html
@@ -37,13 +37,14 @@
 				box-sizing: border-box;
 			}
 			.time-containers {
-				width: 22px;
-				height: 20px;
+				width: 25px;
+				height: 25px;
 				border: 1px solid white;
 				margin: 5px;
 				display: flex;
 				flex-flow: column nowrap;
 				align-items: center;
+				justify-content: center;
 			}
 		</style>
 	</head>
