corrected 12, 13 link paths

--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
 						<a id="contentBox9" class="contentBox" href="./Indexes/Sheet-Questions/9.Array-Of-Objects.html">Array of Objects</a>
 						<a id="contentBox10" class="contentBox" href="./Indexes/Sheet-Questions/10.DOM.html">DOM.</a>
 						<a id="contentBox11" class="contentBox" href="./Indexes/Sheet-Questions/11.Functions.html">Functions.</a>
-						<a id="contentBox12" class="contentBox" href="./Indexes/4.Arrays.html">
+						<a id="contentBox12" class="contentBox" href="./Indexes/Sheet-Questions/12.Inheritance&Prototypes.html">
 							Inheritance & <br />
 							Prototypes.
 						</a>
-						<!-- <a id="contentBox13" class="contentBox" href="./Indexes/5.Strings.html">Strings.</a>
-						<a id="contentBox14" class="contentBox" href="./Indexes/6.Problem-Solving.html">Problem Solving.</a>
+						<a id="contentBox13" class="contentBox" href="./Indexes/Sheet-Questions/13.Promises&Async.html">
+							Promises & <br />
+							Async Await.
+						</a>
+						<!-- <a id="contentBox14" class="contentBox" href="./Indexes/6.Problem-Solving.html">Problem Solving.</a>
 						<a id="contentBox15" class="contentBox" href="./Indexes/7.Objects.html">Objects.</a>
 						<a id="contentBox16" class="contentBox" href="./Indexes/8.Assignment.html">Assignments.</a> -->
 					</div>
