changed anser-code.js path, added 13

--- a/Indexes/Sheet-Questions/10.DOM.html
+++ b/Indexes/Sheet-Questions/10.DOM.html
@@ -258,6 +258,6 @@ document.querySelector("h1").textContent = "Hello World!";
 				</div>
 			</section>
 		</main>
-		<script src="./answer-code.js"></script>
+		<script src="../../Scripts/answer-code.js"></script>
 	</body>
 </html>
