--- a/Indexes/Sheet-Questions/11.Functions.html
+++ b/Indexes/Sheet-Questions/11.Functions.html
@@ -151,6 +151,6 @@ console.log(factorial(a));</code></pre>
 				</details>
 			</section>
 		</main>
-		<script src="./answer-code.js"></script>
+		<script src="../../Scripts/answer-code.js"></script>
 	</body>
 </html>
