--- a/Indexes/Sheet-Questions/13.Promises&Async.html
+++ b/Indexes/Sheet-Questions/13.Promises&Async.html
@@ -132,6 +132,6 @@
 				</details>
 			</section>
 		</main>
-		<script src="./answer-code.js"></script>
+		<script src="../../Scripts/answer-code.js"></script>
 	</body>
 </html>
