--- a/Indexes/Sheet-Questions/9.Array-Of-Objects.html
+++ b/Indexes/Sheet-Questions/9.Array-Of-Objects.html
@@ -166,6 +166,6 @@ console.log(students)</code></pre>
 				</details>
 			</section>
 		</main>
-		<script src="./answer-code.js"></script>
+		<script src="../../Scripts/answer-code.js"></script>
 	</body>
 </html>
