changed bg for sheet questions!

--- a/Indexes/Sheet-Questions/10.DOM.html
+++ b/Indexes/Sheet-Questions/10.DOM.html
@@ -13,6 +13,9 @@
 		<title>JS-DOM Questions</title>
 
 		<style>
+			body {
+				background-image: linear-gradient(315deg, rgb(0 153 255 / 40%), rgb(0 255 187 / 40%) 100%);
+			}
 			.examples,
 			#que10-text {
 				height: fit-content;
