--- a/Indexes/Sheet-Questions/11.Functions.html
+++ b/Indexes/Sheet-Questions/11.Functions.html
@@ -10,6 +10,12 @@
 
 		<link rel="stylesheet" href="../../CSS/styles1.css" />
 
+		<style>
+			body {
+				background-image: linear-gradient(315deg, rgb(0 153 255 / 40%), rgb(0 255 187 / 40%) 100%);
+			}
+		</style>
+
 		<title>JS-Functions Questions</title>
 	</head>
 	<body>
@@ -151,6 +157,6 @@ console.log(factorial(a));</code></pre>
 				</details>
 			</section>
 		</main>
-		<script src="../../Scripts/answer-code.js"></script>
+		<!-- <script src="../../Scripts/answer-code.js"></script> -->
 	</body>
 </html>
