--- a/Indexes/Sheet-Questions/12.Inheritance&Prototypes.html
+++ b/Indexes/Sheet-Questions/12.Inheritance&Prototypes.html
@@ -10,6 +10,15 @@
 
 		<link rel="stylesheet" href="../../CSS/styles1.css" />
 
+		<style>
+			body {
+				background-image: linear-gradient(315deg, rgb(0 153 255 / 40%), rgb(0 255 187 / 40%) 100%);
+			}
+			.margin-span {
+				margin-left: 225px;
+			}
+		</style>
+
 		<title>JS-I&PQuestions</title>
 	</head>
 	<body>
@@ -89,6 +98,6 @@ Array.addAll(arr);</code></pre>
 				</details>
 			</section>
 		</main>
-		<script src="../../Scripts/answer-code.js"></script>
+		<!-- <script src="../../Scripts/answer-code.js"></script> -->
 	</body>
 </html>
