--- a/Indexes/Sheet-Questions/9.Array-Of-Objects.html
+++ b/Indexes/Sheet-Questions/9.Array-Of-Objects.html
@@ -13,6 +13,9 @@
 		<title>JS-Array of Objects Questions</title>
 
 		<style>
+			body {
+				background-image: linear-gradient(315deg, rgb(0 153 255 / 40%), rgb(0 255 187 / 40%) 100%);
+			}
 			.margin-span {
 				margin-left: 225px;
 			}
@@ -166,6 +169,6 @@ console.log(students)</code></pre>
 				</details>
 			</section>
 		</main>
-		<script src="../../Scripts/answer-code.js"></script>
+		<!-- <script src="../../Scripts/answer-code.js"></script> -->
 	</body>
 </html>
