--- a/Indexes/Sheet-Questions/13.Promises&Async.html
+++ b/Indexes/Sheet-Questions/13.Promises&Async.html
@@ -66,7 +66,7 @@
 					<summary id="que4" class="questions">
 						&nbsp;<span class="que-name-span"> Resolve vs Reject.</span>
 						<p class="que-main-para">
-							Create a promise function accepting a argument, if yes is passed to the function then it should go to resolved state and print Promise Resolved, and if nothing is passed then it should go to reject state and catch the error and print Promise Rejected
+							Create a promise function accepting a argument, if yes is passed to the function then it should go to resolved state and print Promise Resolved, and if nothing is passed then it should go to reject state and catch the error and print Promise Rejected.
 						</p>
 					</summary>
 					<div class="details-flex">
